--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-self: center;
-    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.719);
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.719);
     border-radius: 0px 0px 10px 10px;
 }
 
@@ -55,8 +55,8 @@ nav a:hover {
     font-size: 2.1rem;
 }
 
-nav span a{
-    color:#ffd700
+nav span a {
+    color: #ffd700
 }
 
 figure img {
@@ -65,10 +65,11 @@ figure img {
 }
 
 figure img:hover {
-    transform: scale(1.2); /* Aumenta a imagem suavemente */
+    transform: scale(1.2);
+    /* Aumenta a imagem suavemente */
 }
 
-video:hover{
+video:hover {
     transition: transform 0.3s ease;
     border-radius: 10px;
     transform: scale(1.2);
@@ -89,6 +90,7 @@ video:hover{
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
@@ -168,6 +170,7 @@ video:hover{
         opacity: 0;
         transform: translateY(20px);
     }
+
     100% {
         opacity: 1;
         transform: translateY(0);
@@ -194,7 +197,7 @@ video:hover{
     padding: 1rem 2rem;
     margin: auto;
     border-radius: 1rem;
-    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.719);
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.719);
 }
 
 .fontebemvindo {
@@ -237,7 +240,7 @@ video:hover{
 }
 
 .tabelarobbiehabilidade {
-    background: #ffffff;
+    background: linear-gradient(#023E55, #212121) padding-box;;
     height: 20vh;
     width: 100%;
     text-align: center;
@@ -246,7 +249,7 @@ video:hover{
     padding: 1rem 2rem;
     margin: auto;
     border-radius: 1rem;
-    color: black;
+    color: #fff;
 
 }
 
@@ -300,10 +303,8 @@ video:hover{
     color: yellow;
 }
 
-.ghimg>img {
-    justify-content: center;
-    margin: auto;
-    padding: 2rem 1rem;
+.ghimg img {
+    border-radius: 10px;
 }
 
 
@@ -313,11 +314,8 @@ video:hover{
     font-size: 3rem;
 }
 
-.curriculoimg>img {
-    width: 70%;
-    justify-content: center;
-    margin: auto;
-    padding: 2rem 1rem;
+.curriculoimg img{
+    border-radius: 10px;
 }
 
 
@@ -331,7 +329,7 @@ video:hover{
 .conteudoservicos {
     min-width: 300px;
     max-width: 690px;
-    background: #ffffff;
+    background:  linear-gradient(#023E55, #212121) padding-box;
     height: 50vh;
     width: 50%;
     text-align: center;
@@ -340,7 +338,7 @@ video:hover{
     padding: 1rem 2rem;
     margin: auto;
     border-radius: 1rem;
-    color: black;
+    color: #fff;
 }
 
 
@@ -355,18 +353,54 @@ video:hover{
 .conteudocontato {
     min-width: 300px;
     max-width: 690px;
-    background: #ffffff;
+    background: linear-gradient(#023E55, #212121) padding-box;
     height: 40vh;
     width: 50%;
-    text-align: left;
     flex-direction: column;
     justify-content: space-around;
-    padding: 2rem 2rem;
+    padding: 2rem 5rem;
     margin: auto;
     border-radius: 1rem;
-    color: black;
+    color: #fff;
 }
 
+.ctt{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ctt input, .ctt select{
+    width: 350px;
+    height: 30px;
+    border-radius: 10px;
+    background-color: transparent;
+    border: 1px solid #ffffffa0;
+    color: #ffd700;
+}
+
+.ctt3 textarea{
+    width: 400px;
+    height: 60px;
+    border-radius: 10px;
+    background-color: transparent;
+    border: 1px solid #ffffffa0;
+}
+
+.ctt input:focus{
+    outline: none;
+    border-color: #e81cff;
+}
+
+.ctt select:focus{
+    outline: none;
+    border-color: #e81cff;
+}
+
+.ctt3 textarea:focus{
+    outline: none;
+    border-color: #e81cff;
+}
 
 .botaocontainer {
     width: 100%;
@@ -374,6 +408,8 @@ video:hover{
     margin: auto;
     transform: translate("0, 50%");
 }
+
+
 
 button {
     background-color: #203a43;
@@ -385,9 +421,10 @@ button {
     transition: transform 0.2s ease, background-color 0.3s ease;
 }
 
-button:hover{
-    background-color: aqua;
-    transform: scale(1.1); /* Aumenta ligeiramente o tamanho */
+button:hover {
+    background-color: linear-gradient(#023E55, #fff) padding-box;
+    transform: scale(1.1);
+    /* Aumenta ligeiramente o tamanho */
 }
 
 .footer {
@@ -489,24 +526,28 @@ button:hover{
     width: 98%;
 }
 
-.ghimg>img {
+.ghimg img {
     min-width: 300px;
     max-width: 500px;
     width: 100%;
     margin: auto;
 }
 
-.curriculoimg>img {
+.curriculoimg img {
     min-width: 300px;
     max-width: 450px;
     width: 100%;
     margin: auto;
 }
 
-.servicos,
-.contato {
+.servicos{
     height: 100vh;
     width: 98%;
+}
+
+.contato{
+    width: 98%;
+    height: 125vh;
 }
 
 .conteudoservicos {
@@ -519,8 +560,20 @@ button:hover{
 .conteudocontato {
     min-width: 300px;
     max-width: 690px;
-    height: 85vh;
+    height: 110vh;
     width: 100%;
+}
+
+.ctt input, .ctt select{
+    width: 250px;
+    height: 25px;
+    border-radius: 10px;
+}
+
+.ctt3 textarea{
+    width: 250px;
+    height: 90px;
+    border-radius: 10px;
 }
 
 .footer {
